[package]
name = "fyrc_machinst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-stack = "0.4.0"
fxhash = "0.2.1"
fyrc_utils = { version = "0.1.0", path = "../fyrc_utils" }
thiserror = "1.0.47"
