[package]
name = "fyrc_regalloc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-stack = "0.4.0"
fxhash = "0.2.1"
fyrc_machinst = { version = "0.1.0", path = "../fyrc_machinst" }
fyrc_ssa = { version = "0.1.0", path = "../fyrc_ssa", features = ["viz"] }
fyrc_ssa_builder = { version = "0.1.0", path = "../fyrc_ssa_builder" }
fyrc_ssa_passes = { version = "0.1.0", path = "../fyrc_ssa_passes" }
fyrc_utils = { version = "0.1.0", path = "../fyrc_utils" }
thiserror = "1.0.47"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "regalloc_bench"
harness = false
